src/Pages/Solucoes/CaseCard/styles.css
.case-card {
  display: flex;
  max-height: 38.75rem;
  justify-content: space-between;
  margin-top: 6rem;
  width: 100%;
}

.case-card__image {
  object-fit: cover;
  width: 32.5rem;
}

.case-card__text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0 1rem 0 6.875rem;
}

.case-card__title {
  font-size: 3rem;
  font-weight: 700;
  padding: 2rem 0;
}

.case-card__description {
  color: var(--cinza-600);
  font-size: 1.125rem;
}

@media screen and (max-width: 1200px) {
  .case-card {
    height: auto;
  }

  .case-card__text {
    padding: 0 10% 0 3.5rem;
  }

  .case-card__title {
    font-size: 2.5rem;
  }
}

@media screen and (max-width: 1000px) {
  .case-card__image {
    max-width: 20rem;
  }

  .case-card__text {
    padding: 0 1rem 0 2rem;
  }

  .case-card__title {
    font-size: 2rem;
  }
}

@media screen and (max-width: 650px) {
  .case-card {
    align-items: center;
    flex-direction: column;
    margin: 0;
    max-height: none;
  }

  .case-card__image {
    height: auto;
    max-width: 100vw;
  }

  .case-card__text {
    padding: 0 auto;
  }

  .case-card__description {
    text-align: justify;
  }
}

